# judge-env

./: .gitignore  README.md  default.nix  flake.nix  install-profiles.sh  shell.nix
.github/workflows/: build.yml  test.yml
checker/: default.nix  overlay.nix
checker/src/: .gitignore  CMakeLists.txt  file.h  noip-checker.cpp  strict-checker.cpp
checker/src/tests/: test-noip.sh  test-strict.sh  test.py
checker/src/tests/character-diff/: 2.ans
checker/src/tests/noip-ac/: 4.ans  4.out
checker/src/tests/overflow-bug/: prisoner6.ans  prisoner6.out
checker/src/tests/strict-ac/: 3.ans  4.ans
checker/src/tests/toofew/: 2.out
checker/src/tests/toomany/: 3.ans
checker/src/tests/tooshort/: 4.out
gcc/: 13_disable-pragma-and-attribute-for-optimize.patch  overlay.nix
gcc-luogu/: default.nix  disable-pragma-and-attribute-for-optimize.patch
ghc/: overlay.nix
kotlin-native/: default.nix
testlib/: overlay.nix
