cmake_minimum_required(VERSION 3.5)
project(checker)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(noip-checker noip-checker.cpp)
install(TARGETS noip-checker DESTINATION /usr/bin)
add_executable(strict-checker strict-checker.cpp)
install(TARGETS strict-checker DESTINATION /usr/bin)
